2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Take into account that
	allocate_regbeg may need to create new chunk header.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix quoting in legacy parser.

	* grub-core/lib/legacy_parse.c (grub_legacy_escape): Correctly handle
	single quotes.
	(grub_legacy_parse): Likewise.
	Reported by: Jordan Uggla.
	Tested by: Jordan Uggla.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -lgcc on i386 and x86_64.

	* configure.ac (LIBS): Don't add -lgcc on i386 and x86_64.
	* conf/Makefile.common (LDADD_KERNEL): Likewise.
	* grub-core/Makefile.core.def (kernel): Use LDADD_KERNEL.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -Wno-trampolines when supported.

2010-11-14  Modestas Vainius <modax@debian.org>

	* grub-core/kern/emu/getroot.c (grub_util_is_dmraid): Recognise ddf1_
	fakeraid.

2010-11-14  Giuseppe Caizzone <acaizzo@gmail.com>

	Add generic logical block size support for UDF.

	* grub-core/fs/udf.c (GRUB_UDF_LOG2_BLKSIZE): Removed.
	(GRUB_UDF_BLKSZ): Removed.
	(struct grub_udf_data): New field "lbshift" to hold the logical	block
	size of the file system in log2 format. All users updated.
	(sblocklist): Change type to unsigned.
	(grub_udf_mount): Change type of "sblklist" to unsigned.
	Move AVDP search before VRS recognition, because the latter requires
	knowledge of the logical block size, which is detected during the
	former.
	Detect and validate logical block size during AVDP search, adding
	support for block sizes 512, 1024 and 4096.
	Make VRS recognition independent of block size.

2010-11-14  Giuseppe Caizzone <acaizzo@gmail.com>

	Properly handle deleted files on UDF.

	* grub-core/fs/udf.c (grub_udf_iterate_dir): Skip directory entries
	whose "characteristics" field has the bit GRUB_UDF_FID_CHAR_DELETED
	set.

2010-11-14  Giuseppe Caizzone <acaizzo@gmail.com>

	Support reading files larger than 2 GiB.
